--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mui/material": "^6.0.2",
         "antd": "^5.20.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
