--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@mui/material": "^6.0.2",
         "antd": "^5.20.3",
+        "aos": "^2.3.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
