--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/material": "^6.0.2",
         "antd": "^5.20.3",
         "aos": "^2.3.4",
+        "framer-motion": "^11.11.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
